tests/eval/snapshots/file_tests__eval__fib.lx@straightahead.snap
---
source: tests/eval.rs
description: "// Should print all Fibonacci numbers less than 10000\nvar a = 0;\nvar tmp;\n\nfor (var b = 1; a < 10000; b = tmp + b) {\n    print a;\n    tmp = a;\n    a = b;\n}\n\n"
expression: combined
---
:: Output ::
0
1
1
2
3
5
8
13
21
34
55
89
144
233
377
610
987
1597
2584
4181
6765
