tests/eval/snapshots/file_tests__eval__for_loops.lx@full.snap
---
source: tests/eval.rs
description: "for (var x = 0; x < 3; x = x + 1) {\n    print x; // print 0 through 2\n}\n"
expression: combined
---
:: Output ::
0
1
2
