tests/eval/snapshots/file_tests__eval__for_loops.lx@no_cond.snap
---
source: tests/eval.rs
description: "for (var x = 0; ; x = x + 1) {\n    if (x > 10) break;\n    else print x; // 0 through 10\n}\nprint \"yay!\";\n"
expression: combined
---
:: Output ::
0
1
2
3
4
5
6
7
8
9
10
yay!
