tests/eval/snapshots/file_tests__eval__global_vars.lx@case2.snap
---
source: tests/eval.rs
description: "var a;\nprint a;\nvar b = 76;\nvar a = -2;\nprint b + a;\n"
expression: combined
---
:: Output ::
nil
74
