tests/eval/snapshots/file_tests__eval__logic_binops.lx.snap
---
source: tests/eval.rs
description: "print \"hi\" or 2; // \"hi\"\nprint nil or \"yes\"; // \"yes\"\n\nprint \"hi\" and 2; // 2\nprint nil and \"yes\"; // nil\n"
expression: combined
---
:: Output ::
hi
yes
2
nil
